chore: Add hints, update colors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <h1 id="text_box">Tap 'SPACE'</h1>
         </div>
 
+        <div id="controls">
+            SPACE - generate new word<br />
+            ENTER - mutate current word
+        </div>
+
         <script src="script.js"></script>
     </body>
 </html>
