--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="icon"
+            href="./assets/favicons/favicon.ico"
+            type="image/png"
+        />
     </head>
     <body>
         <div id="container">
